--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -89,7 +89,7 @@ body {
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
   background-color: var(--bs-body-bg);
-  -webkit-text-size-adjust: 100%;
+
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
@@ -311,7 +311,7 @@ caption {
 
 th {
   text-align: inherit;
-  text-align: -webkit-match-parent;
+
 }
 
 thead,
@@ -368,12 +368,12 @@ select:disabled {
   display: none !important;
 }
 
-button,
+/* button,
 [type=button],
 [type=reset],
 [type=submit] {
   -webkit-appearance: button;
-}
+} */
 button:not(:disabled),
 [type=button]:not(:disabled),
 [type=reset]:not(:disabled),
@@ -430,7 +430,7 @@ legend + * {
 
 [type=search] {
   outline-offset: -2px;
-  -webkit-appearance: textfield;
+  /* -webkit-appearance: textfield; */
 }
 
 /* rtl:raw:
@@ -451,7 +451,7 @@ legend + * {
 
 ::file-selector-button {
   font: inherit;
-  -webkit-appearance: button;
+
 }
 
 output {
