--- a/views/layouts/login-layout.ejs
+++ b/views/layouts/login-layout.ejs
@@ -1,48 +1,180 @@
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title><%= title %></title>
-        <link rel="icon" href="img/favicon.png" type="img/x-icon">
-        <link href="css/styles.css" rel="stylesheet" />
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    </head>
-    <body class="bg-primary">
-        <div class="container">
-            <%- body %>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="/js/scripts.js"></script>
-        <script>
-            document.addEventListener('DOMContentLoaded', function () { 
-                document.getElementById('loginForm').addEventListener('submit', function(event) { 
-                    event.preventDefault(); 
-                    const username = document.getElementById('username').value; 
-                    const password = document.getElementById('password').value; 
-                    fetch('/login', { 
-                        method: 'POST', 
-                        headers: { 
-                            'Content-Type': 'application/json' 
-                        }, body: JSON.stringify({ username, password }) 
-                    })
-                    .then(response => response.json())
-                    .then(data => {
-                        if (data.success) {
-                            alert('Anda berhasil login'); 
-                            window.location.href = '/';
-                        } else { 
-                            alert('Gagal login: ' + data.message); 
-                        } 
-                    }) 
-                    .catch(error => { 
-                        console.error('Error:', error); 
-                        alert('Terjadi kesalahan saat mencoba login. Silakan coba lagi.'); 
-                    }); 
-                }); 
-            });
-        </script>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title><%= title %></title>
+    <link href="" rel="stylesheet" />
+    <style>
+      * {
+        /* border: 3px solid red; */
+        margin: 0;
+        font-family: "Times New Roman", Times, serif;
+      }
+
+      body {
+        background-image: url("img/xilonen.jpg");
+        background-repeat: repeat;
+        background-size: cover;
+        background-position: center;
+      }
+
+      .container {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        padding: 20px 25px;
+        width: 300px;
+        background-color: rgba(0, 0, 0, 0.7);
+        box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.457);
+        border-radius: 10px;
+      }
+      .container h1 {
+        text-align: center;
+        color: #fafafa;
+        margin-bottom: 20px;
+        text-transform: uppercase;
+        border-bottom: 4px solid #2979ff;
+        font-size: 30px;
+      }
+      .container p {
+        text-align: center;
+        color: #90caf9;
+        margin-bottom: 12px;
+        text-transform: uppercase;
+        font-size: 10px;
+      }
+      .container label {
+        text-align: left;
+        color: #90caf9;
+      }
+      .container form input {
+        width: calc(100% - 20px);
+        padding: 8px 10px;
+        margin-bottom: 10px;
+        border: none;
+        background-color: transparent;
+        border-bottom: 2px solid #2979ff;
+        color: #fff;
+        font-size: 20px;
+      }
+      .btn-hover {
+        width: 290px;
+        font-size: 16px;
+        font-weight: 400;
+        color: #fff;
+        cursor: pointer;
+        margin: 5px;
+        height: 35px;
+        text-align: center;
+        border: none;
+        background-size: 300% 100%;
+        border-radius: 10px;
+        transition: all 0.4s ease-in-out;
+      }
+      .btn-hover:hover {
+        background-position: 100% 0;
+        transition: all 0.4s ease-in-out;
+      }
+      .btn-hover:focus {
+        outline: none;
+      }
+      .btn-hover.color-9 {
+        background-image: linear-gradient(
+          to right,
+          #25aae1,
+          #4481eb,
+          #04befe,
+          #3f86ed
+        );
+        box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
+      }
+      .button > .btn-hover.color-9 > a {
+        text-decoration: none;
+      }
+      .fluid {
+        text-align: left;
+        color: #90caf9;
+        text-transform: uppercase;
+        font-size: 10px;
+      }
+      .fluid > p > a {
+        text-decoration: none;
+      }
+      .forget {
+        margin: 15px 0;
+        font-size: 12px;
+        color: #90caf9;
+        display: flex;
+        justify-content: space-around;
+      }
+      .forget label {
+        display: flex;
+        align-items: center;
+      }
+      .forget label input {
+        margin-right: 1px;
+      }
+      .forget a {
+        color: #90caf9;
+        text-decoration: none;
+        font-weight: 200;
+      }
+      .forget a:hover {
+        text-decoration: underline;
+        transition: all 0.3s ease to left;
+      }
+    </style>
+    <script
+      src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body class="bg-dark">
+    <div class="container"><%- body %></div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/js/scripts.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        document
+          .getElementById("loginForm")
+          .addEventListener("submit", function (event) {
+            event.preventDefault();
+            const username = document.getElementById("username").value;
+            const password = document.getElementById("password").value;
+            fetch("/login", {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({ username, password }),
+            })
+              .then((response) => response.json())
+              .then((data) => {
+                if (data.success) {
+                  alert("Anda berhasil login");
+                  window.location.href = "/";
+                } else {
+                  alert("Gagal login: " + data.message);
+                }
+              })
+              .catch((error) => {
+                console.error("Error:", error);
+                alert(
+                  "Terjadi kesalahan saat mencoba login. Silakan coba lagi."
+                );
+              });
+          });
+      });
+    </script>
+  </body>
 </html>
