--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -1,10 +1,11 @@
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+    <!-- Sidebar Toggle-->
+    <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" style="margin-left: 20px;"><i class="fas fa-bars"></i></button>
     <!-- Navbar Brand-->
     <a class="navbar-brand ps-3">
         <%= judul %>
     </a>
-    <!-- Sidebar Toggle-->
-    <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle"><i class="fas fa-bars"></i></button>
+
 </nav>
 <div id="layoutSidenav">
     <div id="layoutSidenav_nav">
@@ -27,8 +28,31 @@
                 </div>
             </div>
             <div class="sb-sidenav-footer">
-                <div class="small">Dapodik X SMKN 1 Cirebon</div>
-                By: Bagus Maulana
+                <div class="small">Dapodik XI SMKN 1 Cirebon</div>
+                
             </div>
         </nav>
     </div>
+
+    <style>
+        /* Gaya untuk tabel */
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+        th, td {
+            padding: 12px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
+        tr:hover {
+            background-color: #f1f1f1; /* Warna latar belakang saat hover */
+        }
+        .btn {
+            transition: background-color 0.3s, transform 0.3s;
+        }
+        .btn:hover {
+            background-color: #0056b3; /* Ganti warna saat hover */
+            transform: scale(1.05); /* Efek zoom saat hover */
+        }
+    </style>
