--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,32 +1,33 @@
 <div id="layoutAuthentication">
-    <div id="layoutAuthentication_content">
-        <main>
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-5">
-                        <div class="card shadow-lg border-0 rounded-lg mt-5">
-                            <div class="card-header text-center">
-                                <img src="img/favicon.png" alt="Logo" style="height: 100px; width: 100px; margin-right: 20px;">
-                            </div>
-                            <div class="card-body">
-                                <form id="loginForm" action="/login" method="POST">
-                                    <div class="form-group">
-                                        <label class="small mb-1" for="username">username</label>
-                                        <input class="form-control py-4" id="username" name="username" type="text" placeholder="Masukkan Username"/>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="small mb-1" for="password">Password</label>
-                                        <input class="form-control py-4" id="password" name="password" type="password" placeholder="Masukkan Password"/>
-                                    </div>
-                                    <div class="form group d-flex align-items-center justify-content-between mt-4 mb-0">
-                                        <button type="submit" class="btn btn-primary w-100">Login</button>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </main>
-    </div>
+  <div id="layoutAuthentication_content">
+    <h1 class="Login">Login</h1>
+    <form id="loginForm" action="/login" method="POST">
+      <div>
+        <label class="small mb-1" for="username">Username</label><br />
+        <input
+        class="form-conntol py-4"
+          type="text"
+          id="username"
+          name="username"
+          placeholder="Enter Username"
+        />
+      </div>
+      <div>
+        <label class="small mb-1" for="password">Password</label><br />
+        <input
+        class="form-conntol py-4"
+          type="password"
+          id="password"
+          name="password"
+          style="-webkit-text-security: square"
+          placeholder="Enter Password"
+        />
+      </div>
+
+      <div class="button">
+        <button class="btn-hover color-9" type="submit">Log in</button>
+      </div>
+
+    </form>
+  </div>
 </div>
